--- a/franchise.html
+++ b/franchise.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>franchise | imaginary</title>
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <title>안녕하쇼ㅋ | imaginary</title>
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/sub.css" />
